them ten lien he khi xoa, them nut huy-xac nhan khi sua unit name, uet man, nation

--- a/app/main/views/partner/partner.all.html
+++ b/app/main/views/partner/partner.all.html
@@ -490,7 +490,7 @@
                         <div class="modal-header">
                             <button type="button" class="close" ng-click="closeModal('delete_partner_contact')" id="close_modal_delete_partner_contact"><span aria-hidden="true">×</span>
                             </button>
-                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa liên hệ của Đối tác này này?</h4>
+                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa liên hệ {{confirmDeleteName}}?</h4>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" ng-click="closeModal('delete_partner_contact')">Hủy</button>
@@ -505,7 +505,7 @@
                         <div class="modal-header">
                             <button type="button" class="close" ng-click="closeModal('confirm_close_modal')">×</span>
                             </button>
-                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn hủy bỏ nhừng việc đang làm?</h4>
+                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn hủy bỏ những việc đang làm?</h4>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" ng-click="closeModal('confirm_close_modal')">Không</button>
