--- a/app/main/views/partner/partner.annualActivity.all.html
+++ b/app/main/views/partner/partner.annualActivity.all.html
@@ -91,27 +91,27 @@
                             <!-- <th> -->
                             <!-- <input type="checkbox" id="check-all" class="flat"> -->
                             <!-- </th> -->
-                            <th class="column-title">Đối tác</th>
-                            <th class="column-title">Tên hoạt động</th>
-                            <th class="column-title">Nội dung hoạt động</th>
-                            <th class="column-title">Kinh phí</th>
-                            <th class="column-title">Ngày ký</th>
+                            <th class="column-title">Tên đối tác</th>
+                            <th class="column-title">Nội dung hợp tác</th>
+                            <th class="column-title">Hoạt động hợp tác cụ thể</th>
+                            <th class="column-title">Hiệu lực hợp tác</th>
+                            <th class="column-title">Đầu mối UET</th>
+                            <th class="column-title">Đầu mối đối tác</th>
                             <th class="column-title">Sửa</th>
                             <th class="column-title">Xóa</th>
                             <th class="column-title">
-                                <i class="fa fa-chevron-down cursor" data-toggle="collapse" data-target="#export_xcel"></i>
+                                <!-- <i class="fa fa-chevron-down cursor" data-toggle="collapse" data-target="#export_xcel"></i> -->
                             </th>
-                            <!-- <th class="column-title no-link last"><span class="nobr">Action</span> -->
-                            <!-- </th> -->
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="even pointer" ng-repeat="activity in allAnnualActivity | orderBy:'-activity.partnerName'" id="annualActivity_{{activity.id}}">
-                            <td class=" " id="partnerName_{{activity.id}}">{{activity.partnerName}}</td>
+                            <td class=" " id="partnerName_{{activity.id}}">{{activity.contract.partner.partnerName}}</td>
                             <td class=" " id="activityName_{{activity.id}}">{{activity.activityName}}</td>
                             <td class=" " ng-bind-html="activity.content" id="content_{{activity.id}}"></td>
-                            <td class=" " id="funding_{{activity.id}}">{{activity.funding}}</td>
                             <td class=" " id="date_{{activity.id}}">{{activity.date | date:'dd/MM/yyyy'}}</td>
+                            <td class=" " id="funding_{{activity.id}}">{{activity.contract.uetMan}}</td>
+                            <td class=" " id="funding_{{activity.id}}">{{activity.contract.partnerContact}}</td>
                             <td class="cursor ">
                                 <i id="edit_activity_{{activity.id}}" class="fa fa-edit cursor" ng-click="editAnnualActivity(activity.id, activity.content); edit_activity = true"></i>
                                 <button id="button_cancel_edit_activity_{{activity.id}}" ng-if="edit_activity" type="button" class="btn btn-default btn-xs" ng-click="cancelEditActivity(activity.id, activity)">Hủy</button>
